<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RPSGameActivity">

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cod_sala"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:layout_marginTop="16dp" />


    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Esperando"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_code"
        android:textSize="24sp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btn_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Papel"
        android:layout_toLeftOf="@+id/btn_scissors"
        android:layout_below="@id/tv_status"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        />
    <Button
        android:id="@+id/btn_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Piedra"
        android:layout_below="@id/tv_status"
        android:layout_toRightOf="@+id/btn_scissors"
        android:textSize="24sp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btn_scissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tijeras"
        android:layout_below="@id/tv_status"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        />



</RelativeLayout>
